Fix button text being too large

--- a/eros/styles/micro/flatbutton.module.css
+++ b/eros/styles/micro/flatbutton.module.css
@@ -19,7 +19,7 @@
 
     color: white;
     font-weight: 500;
-    font-size: 0.844em;
+    font-size: 0.844rem;
     line-height: 1.125em;
     text-align: center;
 
